--- a/index4.html
+++ b/index4.html
@@ -60,7 +60,23 @@
         }
     </style>
 
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#terms").click(function () {
+                $("#panel").slideToggle("slow");
+            });
+        });
+    </script>
+
+<script> 
+        $(document).ready(function(){
+            $("#termsclose").click(function(){
+                $("#panel").slideUp("slow");
+            });
+        });
+        </script>
+
     <style>
         #terms,
         #panel {
