--- a/index4.html
+++ b/index4.html
@@ -31,7 +31,7 @@
     <title>Beat Hunger Now</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="beathungernow/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
