--- a/index4.html
+++ b/index4.html
@@ -31,7 +31,7 @@
     <title>Beat Hunger Now</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -41,7 +41,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="../agency.min.css" rel="stylesheet" type="text/css">
+    <link href="/agency.min.css" rel="stylesheet" type="text/css">
 
     <style>
         /* Always set the map height explicitly to define the size of the div
